@@ -1,10 +1,14 @@
 # -*- coding: utf-8 -*-
 from __future__ import print_function
+import time
 
 from .decorators import decorator
 
 
-__all__ = ['tap', 'log_calls', 'print_calls', 'log_errors', 'print_errors']
+__all__ = ['tap',
+           'log_calls', 'print_calls',
+           'log_errors', 'print_errors',
+           'log_durations', 'print_durations']
 
 
 def tap(x):
@@ -39,6 +43,31 @@ def log_errors(call, print_func):
 print_errors = log_errors(print)
 
 
+@decorator
+def log_durations(call, print_func):
+    start = time.time()
+    result = call()
+    end = time.time()
+
+    print_func("%s in %s" % (format_time(end - start), signature_repr(call)))
+    return result
+
+print_durations = log_durations(print)
+
+
+def format_time(sec):
+    if sec < 1e-6:
+        return '%6.2f ns' % (sec * 1e9)
+    elif sec < 1e-3:
+        return '%6.2f µs' % (sec * 1e6)
+    elif sec < 1:
+        return '%6.2f ms' % (sec * 1e3)
+    else:
+        return '%6.2f s' % sec
+
+
+### Call signature stringification utils
+
 def signature_repr(call):
     args_repr = map(smart_repr, call._args)
     kwargs_repr = ['%s=%s' % (key, smart_repr(value)) for key, value in call._kwargs.items()]
@@ -49,4 +78,3 @@ def smart_repr(value):
         return repr(value)
     else:
         return str(value)
-
